--- a/index.css
+++ b/index.css
@@ -480,6 +480,9 @@ p{
     }
   }
 /* Section_2 */
+#sec_22{
+background-color: #e7e6e6;
+}
 .section_2{
     background-color: #e7e6e6;
     padding: 0 3rem;
